--- a/samar_Train.ipynb
+++ b/samar_Train.ipynb
@@ -38,15 +38,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8_EbunS2P7yd",
-        "outputId": "ce38fb13-cb9b-4768-a3de-a53cd44d4f75"
+        "outputId": "de5a652c-d692-4e48-e4ff-7a6614e08906"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "szpymLIPhGZY"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "id": "0vB5bTkY8CZ0",
         "outputId": "17551f60-c721-48f2-85c4-cd7efd41007a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,9 +1715,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sVL6UkS93QDp",
-        "outputId": "1354aab5-8aeb-4c75-8367-c5e6e909bb45"
+        "outputId": "cab1fa6c-d5e0-4254-a0a4-7f1f63dfd97b"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1732,7 +1732,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 6
         }
       ]
     },
@@ -1746,7 +1746,7 @@
       "metadata": {
         "id": "cGXoQfzU3k9y"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1760,9 +1760,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dRE7JXyX4LjP",
-        "outputId": "072b7522-9004-4948-be4b-2adc77cdc083"
+        "outputId": "cbc9eaed-52e7-4bf3-d480-204c3ac87cd3"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1774,7 +1774,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 147
+          "execution_count": 8
         }
       ]
     },
@@ -1797,9 +1797,9 @@
           "height": 639
         },
         "id": "ndc0Ao_ERDur",
-        "outputId": "a8c7c01c-9f1d-47aa-ae25-305c234da13a"
+        "outputId": "f0ca09ad-d63b-4dd0-8573-dc078fa82617"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1809,7 +1809,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 148
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -1836,9 +1836,9 @@
           "height": 206
         },
         "id": "37WJW4L5RJpr",
-        "outputId": "bfcdc5b9-37a1-4f1d-f272-8349124cd147"
+        "outputId": "95bb8078-a276-4bc7-ee03-5166bfe190ba"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1860,7 +1860,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49dd54e4-036b-43ae-a244-7b138ecafb93\">\n",
+              "  <div id=\"df-b3649b91-3467-4495-8ee7-057aa8f212c5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1931,7 +1931,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49dd54e4-036b-43ae-a244-7b138ecafb93')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3649b91-3467-4495-8ee7-057aa8f212c5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1982,12 +1982,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-49dd54e4-036b-43ae-a244-7b138ecafb93 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b3649b91-3467-4495-8ee7-057aa8f212c5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-49dd54e4-036b-43ae-a244-7b138ecafb93');\n",
+              "          const element = document.querySelector('#df-b3649b91-3467-4495-8ee7-057aa8f212c5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2010,7 +2010,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 149
+          "execution_count": 10
         }
       ]
     },
@@ -2058,9 +2058,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CKd2i8xotx_H",
-        "outputId": "82b7558f-6c1e-4b3c-9b7e-9d82c51f590f"
+        "outputId": "7b637a5b-5fa9-45ff-cc69-f59f27cb43c4"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2082,7 +2082,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
@@ -2108,7 +2108,7 @@
         "id": "P38gYOb6ucHn",
         "outputId": "5164ff3f-1e06-46e7-8b5c-1f70f9b61058"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2132,9 +2132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kvgTJ0_AYwJK",
-        "outputId": "c8c12cb4-66dd-4834-8982-6825ccdf1fd8"
+        "outputId": "85d0be82-1d93-421c-fadd-5665e52ad4a4"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2144,7 +2144,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ]
     },
@@ -2152,39 +2152,13 @@
       "cell_type": "code",
       "source": [
         "#missing values have been replaced with the mean using the fillna function.\n",
-        "train_data['Item_Weight'].fillna(train_data['Item_Weight'].mean()) "
+        "train_data['Item_Weight'].fillna(train_data['Item_Weight'].mean(), inplace=True) "
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qRlB9UaRZGBd",
-        "outputId": "fef37621-2e41-4562-c2e1-64d4b87d0830"
+        "id": "qRlB9UaRZGBd"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0        9.300\n",
-              "1        5.920\n",
-              "2       17.500\n",
-              "3       19.200\n",
-              "4        8.930\n",
-              "         ...  \n",
-              "8518     6.865\n",
-              "8519     8.380\n",
-              "8520    10.600\n",
-              "8521     7.210\n",
-              "8522    14.800\n",
-              "Name: Item_Weight, Length: 8523, dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2196,7 +2170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bj0tDpsZZ7RV",
-        "outputId": "47d67cd6-3850-4699-d294-9e1ab959301d"
+        "outputId": "77628537-1b90-47e9-b943-239a0f2a3403"
       },
       "execution_count": 14,
       "outputs": [
@@ -2224,7 +2198,7 @@
       "metadata": {
         "id": "8SJGwfeyadKm"
       },
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2238,9 +2212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ogLO3Axya-HH",
-        "outputId": "b4b85a5e-4773-44ff-8ad7-c20229fa0071"
+        "outputId": "334853fe-43ac-4592-b1df-0a567b665ef3"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2262,7 +2236,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -2277,9 +2251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-CEfZNLlcVFQ",
-        "outputId": "6a536866-3444-42dd-855c-5e7e1d4eafb1"
+        "outputId": "8f5c27e3-89a1-4069-d467-fc5817c18c98"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2289,7 +2263,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 19
         }
       ]
     },
@@ -2304,9 +2278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IWuqGB7Vc8fg",
-        "outputId": "1bcf902c-1990-4f3c-dcaa-1906330aa744"
+        "outputId": "2695e54c-1583-4eb3-ed16-4e7caa63ead8"
       },
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2327,7 +2301,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 20
         }
       ]
     },
@@ -2343,7 +2317,7 @@
         "id": "EG6mrNRnd9iB",
         "outputId": "5a57da01-5b7d-4824-f596-b938cd8768c7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2383,9 +2357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MsYEyfXBeErD",
-        "outputId": "94febb16-975f-4b26-fbae-f4c8babfee9c"
+        "outputId": "f2aa52e2-5201-4a56-ca79-d2b488758114"
       },
-      "execution_count": 25,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2406,7 +2380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 23
         }
       ]
     },
@@ -2420,7 +2394,7 @@
       "metadata": {
         "id": "FRcqoGaVenii"
       },
-      "execution_count": 27,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -2433,7 +2407,7 @@
       "metadata": {
         "id": "kIlxaVh7fGzh"
       },
-      "execution_count": 28,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -2446,9 +2420,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9P11G37hfN2v",
-        "outputId": "1bef225d-9725-4bf8-d52d-b74d2e5244b6"
+        "outputId": "3391032c-b025-4381-a82a-0d17f57d1e7f"
       },
-      "execution_count": 29,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2461,7 +2435,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 25
         }
       ]
     },
@@ -2478,25 +2452,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "azFYVj48fhjG",
-        "outputId": "d1a992eb-2b9b-48e1-dd32-ec41737a36ed"
+        "outputId": "0a9d47b2-2145-4592-924d-7dec9fbc6aaa"
       },
-      "execution_count": 31,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Low Fat       3612\n",
-              "Regular       2889\n",
+              "Low Fat       3918\n",
+              "Regular       3006\n",
               "Non-Edible    1599\n",
-              "LF             222\n",
-              "reg            117\n",
-              "low fat         84\n",
               "Name: Item_Fat_Content, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 26
         }
       ]
     }
