--- a/FinalProj_Samar.ipynb
+++ b/FinalProj_Samar.ipynb
@@ -6,7 +6,7 @@
       "name": "FinalProj Samar.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPA7IRCjnij65k1+MOOvesO",
+      "authorship_tag": "ABX9TyMtCK3QU98NzcpUqJJNZAkG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2422,6 +2422,96 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Loan_data['EverDelinquent']\n",
+        "#this will be the target column"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_-rMPio1XksI",
+        "outputId": "c71342bd-ed64-4b49-8f34-44bc857ac1e2"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0         0.0\n",
+              "1         0.0\n",
+              "2         0.0\n",
+              "3         0.0\n",
+              "4         0.0\n",
+              "         ... \n",
+              "182068    0.0\n",
+              "182069    0.0\n",
+              "182070    0.0\n",
+              "182071    0.0\n",
+              "182072    NaN\n",
+              "Name: EverDelinquent, Length: 182073, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#drop some columns that will not effect our target column\n",
+        "Loan_data_edited = Loan_data.drop(['SellerName', 'ServicerName', 'FirstPaymentDate'], axis=1, inplace=True)"
+      ],
+      "metadata": {
+        "id": "BISkGcoXXweR"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Loan_data_edited.columns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xBo87UPmb6sR",
+        "outputId": "3164032d-323e-4f36-9e4b-30f0f8b2b611"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['CreditScore', 'FirstTimeHomebuyer', 'MaturityDate', 'MSA', 'MIP',\n",
+            "       'Units', 'Occupancy', 'OCLTV', 'DTI', 'OrigUPB', 'LTV',\n",
+            "       'OrigInterestRate', 'Channel', 'PPM', 'ProductType', 'PropertyState',\n",
+            "       'PropertyType', 'PostalCode', 'LoanSeqNum', 'LoanPurpose',\n",
+            "       'OrigLoanTerm', 'NumBorrowers', 'EverDelinquent', 'MonthsDelinquent',\n",
+            "       'MonthsInRepayment'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "wDBDqHdLdBaL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
